// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generate pyp data objects should return data for three days for all categories 1`] = `
Object {
  "data": Array [
    Object {
      "categories": Array [
        Object {
          "key": "ambiental",
          "name": "Ambiental",
          "path": "bogota/ambiental",
          "pyp": "3",
        },
        Object {
          "key": "especial",
          "name": "Servicio de Transporte Especial",
          "path": "bogota/servicio-de-transporte-especial",
          "pyp": "7-8",
        },
        Object {
          "key": "particulares",
          "name": "Particulares",
          "path": "bogota/particulares",
          "pyp": "0-2-4-6-8",
        },
        Object {
          "key": "taxis",
          "name": "Taxis",
          "path": "bogota/taxis",
          "pyp": "7-8",
        },
        Object {
          "key": "tpc",
          "name": "Transporte Público Colectivo",
          "path": "bogota/transporte-publico-colectivo",
          "pyp": "5-6",
        },
      ],
      "date": "2018-03-06T05:00:02.000Z",
    },
    Object {
      "categories": Array [
        Object {
          "key": "ambiental",
          "name": "Ambiental",
          "path": "bogota/ambiental",
          "pyp": "4",
        },
        Object {
          "key": "especial",
          "name": "Servicio de Transporte Especial",
          "path": "bogota/servicio-de-transporte-especial",
          "pyp": "9-0",
        },
        Object {
          "key": "particulares",
          "name": "Particulares",
          "path": "bogota/particulares",
          "pyp": "1-3-5-7-9",
        },
        Object {
          "key": "taxis",
          "name": "Taxis",
          "path": "bogota/taxis",
          "pyp": "9-0",
        },
        Object {
          "key": "tpc",
          "name": "Transporte Público Colectivo",
          "path": "bogota/transporte-publico-colectivo",
          "pyp": "7-8",
        },
      ],
      "date": "2018-03-07T05:00:02.000Z",
    },
    Object {
      "categories": Array [
        Object {
          "key": "ambiental",
          "name": "Ambiental",
          "path": "bogota/ambiental",
          "pyp": "5",
        },
        Object {
          "key": "especial",
          "name": "Servicio de Transporte Especial",
          "path": "bogota/servicio-de-transporte-especial",
          "pyp": "1-2",
        },
        Object {
          "key": "particulares",
          "name": "Particulares",
          "path": "bogota/particulares",
          "pyp": "0-2-4-6-8",
        },
        Object {
          "key": "taxis",
          "name": "Taxis",
          "path": "bogota/taxis",
          "pyp": "1-2",
        },
        Object {
          "key": "tpc",
          "name": "Transporte Público Colectivo",
          "path": "bogota/transporte-publico-colectivo",
          "pyp": "9-0",
        },
      ],
      "date": "2018-03-08T05:00:02.000Z",
    },
  ],
  "info": Object {
    "ambiental": Object {
      "days": Array [
        "Lunes a sábado (No se aplicará en los días festivos establecidos por la Ley)",
        "Lunes a viernes (No se aplicará en los días festivos establecidos por la Ley)",
      ],
      "decrees": Array [
        Object {
          "name": "Decreto 325 del 16 de agosto de 2006",
          "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=21050",
        },
        Object {
          "name": "Decreto 174 de 2006",
          "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=56330",
        },
        Object {
          "name": "Calendario pico y placa Bogotá primer semestre 2018 unificado",
          "url": "https://cdn.pyphoy.com/docs/bogota/calendario-pico-y-placa-primer-semestre-2018-unificado.pdf",
        },
        Object {
          "name": "Calendario pico y placa Bogotá segundo semestre 2018 unificado",
          "url": "https://cdn.pyphoy.com/docs/bogota/calendario-pico-y-placa-segundo-semestre-2018-unificado.pdf",
        },
      ],
      "exceptions": "<ul>
          <li>
            <strong>Vehículos de Transporte Público Colectivo de Pasajeros</strong>:
            <ul>
              <li>No será aplicable a los vehículos vinculados a las empresas de transporte público colectiro que se acojan al \\"Programa de Autorregulación Ambiental\\".
              </li>
            </ul>
          </li>
          <li>
            <strong>Vehículos de Transporte de Carga</strong>:
            <ul>
              <li>No será aplicable a los vehículos de transporte de carga de cinco toneladas o menos de peso bruto vehícular.</li>
              <li>No será aplicable a los vehículos particulares de carga, así como a los vinculados a las empresas de transporte de carga que se acojan al \\"Programa de Autorregurlación Ambiental.</li>
            </ul>
          </li>
        </ul>",
      "hours": Array [
        Object {
          "comment": "Transporte Público Colectivo",
          "days": Array [],
          "hours": Array [
            Array [
              "6:00",
              "10:00",
            ],
          ],
        },
        Object {
          "comment": "Transporte de Carga",
          "days": Array [],
          "hours": Array [
            Array [
              "9:00",
              "10:00",
            ],
          ],
        },
      ],
      "name": "Ambiental",
      "observations": "",
      "path": "bogota/ambiental",
      "scheme": "Para todos los vehículos de transporte de carga (incluye servicio público y particular).",
      "vehicleClasses": Array [
        "Vehículos de Transporte Público Colectivo de pasajeros",
        "Vehículos de Transporte de Carga",
      ],
    },
    "especial": Object {
      "days": Array [
        "Lunes a sábado (No se aplicará en los días festivos establecidos por la Ley).",
      ],
      "decrees": Array [
        Object {
          "name": "Decreto 248 del 14 de junio de 2016",
          "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=66359",
        },
        Object {
          "name": "Calendario pico y placa Bogotá primer semestre 2018 unificado",
          "url": "https://cdn.pyphoy.com/docs/bogota/calendario-pico-y-placa-primer-semestre-2018-unificado.pdf",
        },
        Object {
          "name": "Calendario pico y placa Bogotá segundo semestre 2018 unificado",
          "url": "https://cdn.pyphoy.com/docs/bogota/calendario-pico-y-placa-segundo-semestre-2018-unificado.pdf",
        },
      ],
      "hours": Array [
        Object {
          "comment": "",
          "days": Array [],
          "hours": Array [
            Array [
              "5:30",
              "21:00",
            ],
          ],
        },
      ],
      "name": "Servicio de Transporte Especial",
      "observations": "",
      "path": "bogota/servicio-de-transporte-especial",
      "scheme": "Cíclico de acuerdo con el último número de la placa del vehículo (2 dígitos por día según calendario establecido)",
      "vehicleClasses": Array [
        "Vehículos de servicio público de transporte terrestre automotor especial, clase automóvil, camioneta o campero, con capacidad para cuatro (4) pasajeros (sin incluir conductor)",
      ],
    },
    "particulares": Object {
      "days": Array [
        "Lunes a viernes hábiles",
      ],
      "decrees": Array [
        Object {
          "name": "Decreto 515 del 22 de Noviembre de 2016",
          "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=55963",
        },
        Object {
          "name": "Decreto 575 del 17 de diciembre de 2013",
          "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=67497",
        },
        Object {
          "name": "Decreto 159 del 11 de abril de 2014",
          "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=57155",
        },
        Object {
          "name": "Calendario pico y placa Bogotá primer semestre 2018 unificado",
          "url": "https://cdn.pyphoy.com/docs/bogota/calendario-pico-y-placa-primer-semestre-2018-unificado.pdf",
        },
        Object {
          "name": "Calendario pico y placa Bogotá segundo semestre 2018 unificado",
          "url": "https://cdn.pyphoy.com/docs/bogota/calendario-pico-y-placa-segundo-semestre-2018-unificado.pdf",
        },
      ],
      "exceptions": "<ul>
          <li>Vehículos automotores propulsados exclusivamente por motores eléctricos.</li>
          <li>Caravana presidencial. Grupo de vehículos que hagan parte del esquema de seguridad de la Presidencia de la República y están al servicio de actividades inherentes.</li>
          <li>Vehículos de servicio diplomático o consular. Automotor indentificado con placas especiales asignadas por el Ministerio de Relaciones Exteriores.</li>
          <li>Carrozas fúnebres. Vehículos destinados y/o adecuados técnicamente para el traslado de féretros, propiedad de las funerarias o agencias mortuorias.</li>
          <li>Vehículos de organismos de seguridad del Estado. Los automotores que pertenezcan o hagan parte de los cuerpos de seguridad del Estado, Fuerzas Militares, Polocía Nacional y Cuerpo Técnico de Investigación de la Fiscalía General de La Nacioón y los que ejerzan funciones legales de policia judicial.</li>
          <li>Vehículos de emergencia. Automotores debidamente identificados e iluminados, dispuestos para movilizar personas afectadas en salud, prevenir o atender desastres y/o calamidades, o actividades policiales, debidamente registrados como tal con las normas y características que exige la actividad para la cual se matricules, y los automotores propiedad de las empresas que prestan atención medica domiciliaria, debidamente identificados, solo cuando en ellos se desplace personal médico en servicio.</li>
          <li>Vehículos utilizados para el transporte de personas en condición de Discapacidad: Automotores que transporten o sean conducidos por pesonas cuya condición motora, sensorial o mental limite o restrija de manera permanente su movilidad. La condición de discapacidad permanente que limita la movilidad debe ser claramente acreditada con la certificación médica correspondiente, expedidad por la EPS, IPS o ESE. La excepción aplica únicamente para la inscripción de un (1) vehículo por persona en condición de discapacidad.</li>
          <li>Vehículos de empresas de servicios públicos domiciliarios. Automotores destinados o contratados por las Empresas de Servicio Públicos Domiciliarios, exclusivamente para el mantenimiento, instalación y/o reparación de las redes de servicios públicos domiciliarios en la ciudad de Bogotá D.C., siempre y cuando cuentes con plena y pública identificación, consistente en los logos de la empresa contratante pintados o adheridos en la carrocería.</li>
          <li>Vehículos destinados al control del tráfico y grúas. Automotores tipo grúa y aquellos destinados al control del tráfico en el Distrito Capital.</li>
          <li>Vehículos de control de emisiones y vertimientos. Vehículos utilizados por la Secretaría Distrital De Ambiente o por el Ministerio de Ambiente y Desarrollo Sostenible o quein haga sus veces, para la revisión, atención y prevenció de emisiones y vertimientos contaminantes, siempre y cuando tengan los logos pintados o adheridos en la carrocería.</li>
          <li>Motocicletas.</li>
          <li>Vehículos blindados. Automotores con nivel tres (3) o superior de blindaje, insctritos en el Registro Distrital Automotor y autorizado el blindaje por la Superintendencia de Vigilancia y Seguridad Privada.</li>
          <li>Vehículos escolta: Automotores que estén al servicio de actividades inherentes a la protección de personas debidamente autorizados por la Superintendencia de Vigilancia y Seguridad Privada o que hagan parte de esquemas de seguridad autorizados por los organismos del estado, y solo durante la prestación del servicio.</li>
          <li>Vehículos de medios de comunicación. Automotores de propiedad de los medios de comunicación masiva de radio, prensa y televisión, que porten pintados o adheridos en la corrocería en forma visible los distintivos del medio de comunicación y que transporten personal o equipos técnicos de comunicación para el desarrollo de la labor periodística. Para efectos de la inscripción en el registro de exceptuados, se deberá presentar licencia expedida por la Autoridad Nacional o quien haga sus veces, donde se autoriza como medio de comunicación.</li>
          <li>Vehículos de autoridades judiciales. Vehículos de propiedad de los/as, Jueces/zas, Fiscales/as y los/as Procuradores/as Delegados/as ante las Altas Cortes, a quienes el Consejo Seccional de la Judicatura, la Fiscalia General de la Nación y la Procuraduría General de la Nación certifiquen desempeñar dicha labor en Bogotá, D.C., o en el Departamento de Cundinamarca, y no contar con asignación de un vehículo oficial para su transporte.</li>
          <li>Vehículos de transporte escolar. Vehículos propiedad de instituciones edicativas y únicamente cuando sean empleados para el transporte de sus estudiantes. Estos deberán operar y estar plenamente identificados de confirmidad con las normas que regulan el transporte escolar.</li>
        </ul>
        <p>La Secretaría Distrital de Movilidad llevará a cabo un registro de vehículos exceptuados, para efectos de evitar la imposición de comparendos por medios técnicos y tecnológicos y definirá las condiciones necesarias para la inscripción de dichos vehículos. La inscripción en el registro de exceptuados será válida mientras subsistan las condiciones que configuran la excepción y estará sujeta a la verificación y depuración.</p>
        <p>Se prohíbe la expedición de permisos especiales de circulación por parte de las autoridades de tránsito. Los automotores exceptuados podrán circular con la simple demostración de las condiciones señaladas, y en consecuencia no requerirán de la expedición de permiso alguno. En cuanto a los controles por medios tecnológicos, bastará con la inscripción en registro referido en el párrafo anterior.</p>
        ",
      "hours": Array [
        Object {
          "comment": "",
          "days": Array [],
          "hours": Array [
            Array [
              "6:00",
              "8:30",
            ],
            Array [
              "15:00",
              "19:30",
            ],
          ],
        },
      ],
      "name": "Particulares",
      "observations": "No aplicará desde el día hábil siguiente al veinticinco (25) de diciembre de cada año, hasta el viernes hábil antes del descanso ordenado por la Ley 51 de 1983 para la festividad correspondiente al seis (6) de enero del año siguiente.",
      "path": "bogota/particulares",
      "scheme": "Día par hábil: placa último dígito par. Día impar hábil: placa último dígito impar.",
      "vehicleClasses": Array [
        "Vehículos automotores de servicio particular",
      ],
    },
    "taxis": Object {
      "days": Array [
        "Lunes a sábado (No se aplicará en los días festivos establecidos por la Ley)",
      ],
      "decrees": Array [
        Object {
          "name": "Decreto 660 del 27 de agosto de 2001",
          "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=4643",
        },
        Object {
          "name": "Decreto 058 del 10 de marzo de 2003",
          "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=7182",
        },
        Object {
          "name": "Decreto 051 del 20 de febrero de 2004",
          "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=12124",
        },
        Object {
          "name": "Calendario pico y placa Bogotá primer semestre 2018 unificado",
          "url": "https://cdn.pyphoy.com/docs/bogota/calendario-pico-y-placa-primer-semestre-2018-unificado.pdf",
        },
        Object {
          "name": "Calendario pico y placa Bogotá segundo semestre 2018 unificado",
          "url": "https://cdn.pyphoy.com/docs/bogota/calendario-pico-y-placa-segundo-semestre-2018-unificado.pdf",
        },
      ],
      "exceptions": "<ul>
        <li>Vehículos vinculados al transporte masivo de pasajeros bien sean articulados o alimentadores.</li>
        <li>Vehículos de tranporte público colectivo intermunicipal de pasajeros cuyo destino u origen sea el Terminal de Transporte de Bogotá.</li>
        <li>Vehículos de servicios especiales de transporte de asalariados y escolares debidamente autorizados.</li>
        <li>Vehículos de carga.</li>
        <li>Vehículos de servicios especiales de turismo, salvo aquellos a los cuales alude el artículo primero del presente Decreto.</li>
      </ul>",
      "hours": Array [
        Object {
          "comment": "",
          "days": Array [],
          "hours": Array [
            Array [
              "5:30",
              "21:00",
            ],
          ],
        },
      ],
      "name": "Taxis",
      "path": "bogota/taxis",
      "scheme": "Cíclico de acuerdo con el último número de la placa del vehículo (2 dígitos por día según calendario establecido)",
      "vehicleClasses": Array [
        "Vehículos de transporte público individual de pasajeros - Taxis",
      ],
    },
    "tpc": Object {
      "days": Array [
        "Lunes a sábado (No se aplicará en los días domingos y festivos establecidos por la Ley)",
      ],
      "decrees": Array [
        Object {
          "name": "Decreto 444 de 2014",
          "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=59702",
        },
        Object {
          "name": "Calendario pico y placa Bogotá primer semestre 2018 unificado",
          "url": "https://cdn.pyphoy.com/docs/bogota/calendario-pico-y-placa-primer-semestre-2018-unificado.pdf",
        },
        Object {
          "name": "Calendario pico y placa Bogotá segundo semestre 2018 unificado",
          "url": "https://cdn.pyphoy.com/docs/bogota/calendario-pico-y-placa-segundo-semestre-2018-unificado.pdf",
        },
      ],
      "hours": Array [
        Object {
          "comment": "Todo el día",
          "days": Array [],
          "hours": Array [
            Array [],
          ],
        },
      ],
      "name": "Transporte Público Colectivo",
      "observations": "Los vehículos de servicio público de transporte colectivo de pasajeros con restricción, podrán circular con no más de un (1) acompañante, únicamente para atender labores de mantenimiento, alistamiento, reparación o revisión técnico mecánica, portando en un lugar visible aviso que exprese claramente que se encuentran fuera de servicio.",
      "path": "bogota/transporte-publico-colectivo",
      "scheme": "Cíclico de acuerdo con el último número de la placa del vehículo (2 dígitos por día según calendario establecido)",
      "vehicleClasses": Array [
        "Vehículos de Transporte Público Colectivo (TPC)",
      ],
    },
  },
  "name": "Bogotá",
  "path": "bogota",
}
`;

exports[`Generate pyp data objects should return pyp data for one date 1`] = `
Array [
  Object {
    "key": "ambiental",
    "name": "Ambiental",
    "path": "bogota/ambiental",
    "pyp": "3",
  },
  Object {
    "key": "especial",
    "name": "Servicio de Transporte Especial",
    "path": "bogota/servicio-de-transporte-especial",
    "pyp": "7-8",
  },
  Object {
    "key": "particulares",
    "name": "Particulares",
    "path": "bogota/particulares",
    "pyp": "0-2-4-6-8",
  },
  Object {
    "key": "taxis",
    "name": "Taxis",
    "path": "bogota/taxis",
    "pyp": "7-8",
  },
  Object {
    "key": "tpc",
    "name": "Transporte Público Colectivo",
    "path": "bogota/transporte-publico-colectivo",
    "pyp": "5-6",
  },
]
`;

exports[`Generate pyp data objects should return pyp meta-info for all categories 1`] = `
Object {
  "ambiental": Object {
    "days": Array [
      "Lunes a sábado (No se aplicará en los días festivos establecidos por la Ley)",
      "Lunes a viernes (No se aplicará en los días festivos establecidos por la Ley)",
    ],
    "decrees": Array [
      Object {
        "name": "Decreto 325 del 16 de agosto de 2006",
        "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=21050",
      },
      Object {
        "name": "Decreto 174 de 2006",
        "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=56330",
      },
      Object {
        "name": "Calendario pico y placa Bogotá primer semestre 2018 unificado",
        "url": "https://cdn.pyphoy.com/docs/bogota/calendario-pico-y-placa-primer-semestre-2018-unificado.pdf",
      },
      Object {
        "name": "Calendario pico y placa Bogotá segundo semestre 2018 unificado",
        "url": "https://cdn.pyphoy.com/docs/bogota/calendario-pico-y-placa-segundo-semestre-2018-unificado.pdf",
      },
    ],
    "exceptions": "<ul>
          <li>
            <strong>Vehículos de Transporte Público Colectivo de Pasajeros</strong>:
            <ul>
              <li>No será aplicable a los vehículos vinculados a las empresas de transporte público colectiro que se acojan al \\"Programa de Autorregulación Ambiental\\".
              </li>
            </ul>
          </li>
          <li>
            <strong>Vehículos de Transporte de Carga</strong>:
            <ul>
              <li>No será aplicable a los vehículos de transporte de carga de cinco toneladas o menos de peso bruto vehícular.</li>
              <li>No será aplicable a los vehículos particulares de carga, así como a los vinculados a las empresas de transporte de carga que se acojan al \\"Programa de Autorregurlación Ambiental.</li>
            </ul>
          </li>
        </ul>",
    "hours": Array [
      Object {
        "comment": "Transporte Público Colectivo",
        "days": Array [],
        "hours": Array [
          Array [
            "6:00",
            "10:00",
          ],
        ],
      },
      Object {
        "comment": "Transporte de Carga",
        "days": Array [],
        "hours": Array [
          Array [
            "9:00",
            "10:00",
          ],
        ],
      },
    ],
    "name": "Ambiental",
    "observations": "",
    "path": "bogota/ambiental",
    "scheme": "Para todos los vehículos de transporte de carga (incluye servicio público y particular).",
    "vehicleClasses": Array [
      "Vehículos de Transporte Público Colectivo de pasajeros",
      "Vehículos de Transporte de Carga",
    ],
  },
  "especial": Object {
    "days": Array [
      "Lunes a sábado (No se aplicará en los días festivos establecidos por la Ley).",
    ],
    "decrees": Array [
      Object {
        "name": "Decreto 248 del 14 de junio de 2016",
        "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=66359",
      },
      Object {
        "name": "Calendario pico y placa Bogotá primer semestre 2018 unificado",
        "url": "https://cdn.pyphoy.com/docs/bogota/calendario-pico-y-placa-primer-semestre-2018-unificado.pdf",
      },
      Object {
        "name": "Calendario pico y placa Bogotá segundo semestre 2018 unificado",
        "url": "https://cdn.pyphoy.com/docs/bogota/calendario-pico-y-placa-segundo-semestre-2018-unificado.pdf",
      },
    ],
    "hours": Array [
      Object {
        "comment": "",
        "days": Array [],
        "hours": Array [
          Array [
            "5:30",
            "21:00",
          ],
        ],
      },
    ],
    "name": "Servicio de Transporte Especial",
    "observations": "",
    "path": "bogota/servicio-de-transporte-especial",
    "scheme": "Cíclico de acuerdo con el último número de la placa del vehículo (2 dígitos por día según calendario establecido)",
    "vehicleClasses": Array [
      "Vehículos de servicio público de transporte terrestre automotor especial, clase automóvil, camioneta o campero, con capacidad para cuatro (4) pasajeros (sin incluir conductor)",
    ],
  },
  "particulares": Object {
    "days": Array [
      "Lunes a viernes hábiles",
    ],
    "decrees": Array [
      Object {
        "name": "Decreto 515 del 22 de Noviembre de 2016",
        "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=55963",
      },
      Object {
        "name": "Decreto 575 del 17 de diciembre de 2013",
        "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=67497",
      },
      Object {
        "name": "Decreto 159 del 11 de abril de 2014",
        "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=57155",
      },
      Object {
        "name": "Calendario pico y placa Bogotá primer semestre 2018 unificado",
        "url": "https://cdn.pyphoy.com/docs/bogota/calendario-pico-y-placa-primer-semestre-2018-unificado.pdf",
      },
      Object {
        "name": "Calendario pico y placa Bogotá segundo semestre 2018 unificado",
        "url": "https://cdn.pyphoy.com/docs/bogota/calendario-pico-y-placa-segundo-semestre-2018-unificado.pdf",
      },
    ],
    "exceptions": "<ul>
          <li>Vehículos automotores propulsados exclusivamente por motores eléctricos.</li>
          <li>Caravana presidencial. Grupo de vehículos que hagan parte del esquema de seguridad de la Presidencia de la República y están al servicio de actividades inherentes.</li>
          <li>Vehículos de servicio diplomático o consular. Automotor indentificado con placas especiales asignadas por el Ministerio de Relaciones Exteriores.</li>
          <li>Carrozas fúnebres. Vehículos destinados y/o adecuados técnicamente para el traslado de féretros, propiedad de las funerarias o agencias mortuorias.</li>
          <li>Vehículos de organismos de seguridad del Estado. Los automotores que pertenezcan o hagan parte de los cuerpos de seguridad del Estado, Fuerzas Militares, Polocía Nacional y Cuerpo Técnico de Investigación de la Fiscalía General de La Nacioón y los que ejerzan funciones legales de policia judicial.</li>
          <li>Vehículos de emergencia. Automotores debidamente identificados e iluminados, dispuestos para movilizar personas afectadas en salud, prevenir o atender desastres y/o calamidades, o actividades policiales, debidamente registrados como tal con las normas y características que exige la actividad para la cual se matricules, y los automotores propiedad de las empresas que prestan atención medica domiciliaria, debidamente identificados, solo cuando en ellos se desplace personal médico en servicio.</li>
          <li>Vehículos utilizados para el transporte de personas en condición de Discapacidad: Automotores que transporten o sean conducidos por pesonas cuya condición motora, sensorial o mental limite o restrija de manera permanente su movilidad. La condición de discapacidad permanente que limita la movilidad debe ser claramente acreditada con la certificación médica correspondiente, expedidad por la EPS, IPS o ESE. La excepción aplica únicamente para la inscripción de un (1) vehículo por persona en condición de discapacidad.</li>
          <li>Vehículos de empresas de servicios públicos domiciliarios. Automotores destinados o contratados por las Empresas de Servicio Públicos Domiciliarios, exclusivamente para el mantenimiento, instalación y/o reparación de las redes de servicios públicos domiciliarios en la ciudad de Bogotá D.C., siempre y cuando cuentes con plena y pública identificación, consistente en los logos de la empresa contratante pintados o adheridos en la carrocería.</li>
          <li>Vehículos destinados al control del tráfico y grúas. Automotores tipo grúa y aquellos destinados al control del tráfico en el Distrito Capital.</li>
          <li>Vehículos de control de emisiones y vertimientos. Vehículos utilizados por la Secretaría Distrital De Ambiente o por el Ministerio de Ambiente y Desarrollo Sostenible o quein haga sus veces, para la revisión, atención y prevenció de emisiones y vertimientos contaminantes, siempre y cuando tengan los logos pintados o adheridos en la carrocería.</li>
          <li>Motocicletas.</li>
          <li>Vehículos blindados. Automotores con nivel tres (3) o superior de blindaje, insctritos en el Registro Distrital Automotor y autorizado el blindaje por la Superintendencia de Vigilancia y Seguridad Privada.</li>
          <li>Vehículos escolta: Automotores que estén al servicio de actividades inherentes a la protección de personas debidamente autorizados por la Superintendencia de Vigilancia y Seguridad Privada o que hagan parte de esquemas de seguridad autorizados por los organismos del estado, y solo durante la prestación del servicio.</li>
          <li>Vehículos de medios de comunicación. Automotores de propiedad de los medios de comunicación masiva de radio, prensa y televisión, que porten pintados o adheridos en la corrocería en forma visible los distintivos del medio de comunicación y que transporten personal o equipos técnicos de comunicación para el desarrollo de la labor periodística. Para efectos de la inscripción en el registro de exceptuados, se deberá presentar licencia expedida por la Autoridad Nacional o quien haga sus veces, donde se autoriza como medio de comunicación.</li>
          <li>Vehículos de autoridades judiciales. Vehículos de propiedad de los/as, Jueces/zas, Fiscales/as y los/as Procuradores/as Delegados/as ante las Altas Cortes, a quienes el Consejo Seccional de la Judicatura, la Fiscalia General de la Nación y la Procuraduría General de la Nación certifiquen desempeñar dicha labor en Bogotá, D.C., o en el Departamento de Cundinamarca, y no contar con asignación de un vehículo oficial para su transporte.</li>
          <li>Vehículos de transporte escolar. Vehículos propiedad de instituciones edicativas y únicamente cuando sean empleados para el transporte de sus estudiantes. Estos deberán operar y estar plenamente identificados de confirmidad con las normas que regulan el transporte escolar.</li>
        </ul>
        <p>La Secretaría Distrital de Movilidad llevará a cabo un registro de vehículos exceptuados, para efectos de evitar la imposición de comparendos por medios técnicos y tecnológicos y definirá las condiciones necesarias para la inscripción de dichos vehículos. La inscripción en el registro de exceptuados será válida mientras subsistan las condiciones que configuran la excepción y estará sujeta a la verificación y depuración.</p>
        <p>Se prohíbe la expedición de permisos especiales de circulación por parte de las autoridades de tránsito. Los automotores exceptuados podrán circular con la simple demostración de las condiciones señaladas, y en consecuencia no requerirán de la expedición de permiso alguno. En cuanto a los controles por medios tecnológicos, bastará con la inscripción en registro referido en el párrafo anterior.</p>
        ",
    "hours": Array [
      Object {
        "comment": "",
        "days": Array [],
        "hours": Array [
          Array [
            "6:00",
            "8:30",
          ],
          Array [
            "15:00",
            "19:30",
          ],
        ],
      },
    ],
    "name": "Particulares",
    "observations": "No aplicará desde el día hábil siguiente al veinticinco (25) de diciembre de cada año, hasta el viernes hábil antes del descanso ordenado por la Ley 51 de 1983 para la festividad correspondiente al seis (6) de enero del año siguiente.",
    "path": "bogota/particulares",
    "scheme": "Día par hábil: placa último dígito par. Día impar hábil: placa último dígito impar.",
    "vehicleClasses": Array [
      "Vehículos automotores de servicio particular",
    ],
  },
  "taxis": Object {
    "days": Array [
      "Lunes a sábado (No se aplicará en los días festivos establecidos por la Ley)",
    ],
    "decrees": Array [
      Object {
        "name": "Decreto 660 del 27 de agosto de 2001",
        "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=4643",
      },
      Object {
        "name": "Decreto 058 del 10 de marzo de 2003",
        "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=7182",
      },
      Object {
        "name": "Decreto 051 del 20 de febrero de 2004",
        "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=12124",
      },
      Object {
        "name": "Calendario pico y placa Bogotá primer semestre 2018 unificado",
        "url": "https://cdn.pyphoy.com/docs/bogota/calendario-pico-y-placa-primer-semestre-2018-unificado.pdf",
      },
      Object {
        "name": "Calendario pico y placa Bogotá segundo semestre 2018 unificado",
        "url": "https://cdn.pyphoy.com/docs/bogota/calendario-pico-y-placa-segundo-semestre-2018-unificado.pdf",
      },
    ],
    "exceptions": "<ul>
        <li>Vehículos vinculados al transporte masivo de pasajeros bien sean articulados o alimentadores.</li>
        <li>Vehículos de tranporte público colectivo intermunicipal de pasajeros cuyo destino u origen sea el Terminal de Transporte de Bogotá.</li>
        <li>Vehículos de servicios especiales de transporte de asalariados y escolares debidamente autorizados.</li>
        <li>Vehículos de carga.</li>
        <li>Vehículos de servicios especiales de turismo, salvo aquellos a los cuales alude el artículo primero del presente Decreto.</li>
      </ul>",
    "hours": Array [
      Object {
        "comment": "",
        "days": Array [],
        "hours": Array [
          Array [
            "5:30",
            "21:00",
          ],
        ],
      },
    ],
    "name": "Taxis",
    "path": "bogota/taxis",
    "scheme": "Cíclico de acuerdo con el último número de la placa del vehículo (2 dígitos por día según calendario establecido)",
    "vehicleClasses": Array [
      "Vehículos de transporte público individual de pasajeros - Taxis",
    ],
  },
  "tpc": Object {
    "days": Array [
      "Lunes a sábado (No se aplicará en los días domingos y festivos establecidos por la Ley)",
    ],
    "decrees": Array [
      Object {
        "name": "Decreto 444 de 2014",
        "url": "http://www.alcaldiabogota.gov.co/sisjur/normas/Norma1.jsp?i=59702",
      },
      Object {
        "name": "Calendario pico y placa Bogotá primer semestre 2018 unificado",
        "url": "https://cdn.pyphoy.com/docs/bogota/calendario-pico-y-placa-primer-semestre-2018-unificado.pdf",
      },
      Object {
        "name": "Calendario pico y placa Bogotá segundo semestre 2018 unificado",
        "url": "https://cdn.pyphoy.com/docs/bogota/calendario-pico-y-placa-segundo-semestre-2018-unificado.pdf",
      },
    ],
    "hours": Array [
      Object {
        "comment": "Todo el día",
        "days": Array [],
        "hours": Array [
          Array [],
        ],
      },
    ],
    "name": "Transporte Público Colectivo",
    "observations": "Los vehículos de servicio público de transporte colectivo de pasajeros con restricción, podrán circular con no más de un (1) acompañante, únicamente para atender labores de mantenimiento, alistamiento, reparación o revisión técnico mecánica, portando en un lugar visible aviso que exprese claramente que se encuentran fuera de servicio.",
    "path": "bogota/transporte-publico-colectivo",
    "scheme": "Cíclico de acuerdo con el último número de la placa del vehículo (2 dígitos por día según calendario establecido)",
    "vehicleClasses": Array [
      "Vehículos de Transporte Público Colectivo (TPC)",
    ],
  },
}
`;
